<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activityWrapper"
    android:padding="8dp">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_account"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:id="@+id/userNameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        >
        <TextView
            android:id="@+id/userNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/userName"
            android:paddingEnd="4dp"
            app:layout_constraintTop_toTopOf="@id/userNameWrapper"
            app:layout_constraintBottom_toBottomOf="@id/userNameWrapper"
            />
        <TextView
            android:id="@+id/userNameActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="Sign in to show your name!"
            app:layout_constraintTop_toTopOf="@id/userNameWrapper"
            app:layout_constraintBottom_toBottomOf="@id/userNameWrapper"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/userNameWrapper"
        app:layout_constraintStart_toStartOf="parent"
        >
        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/email"
            android:paddingEnd="4dp"
            app:layout_constraintTop_toTopOf="@id/emailWrapper"
            app:layout_constraintBottom_toBottomOf="@id/emailWrapper"
            />
        <TextView
            android:id="@+id/emailActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="example@myemail.com"
            app:layout_constraintTop_toTopOf="@id/emailWrapper"
            app:layout_constraintBottom_toBottomOf="@id/emailWrapper"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/emailWrapper"
        app:layout_constraintStart_toStartOf="parent"
        >
        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingEnd="4dp"
            android:text="@string/password"

            />
        <TextView
            android:id="@+id/passwordActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="********"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/clearFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearFavorites"
        android:textSize="16sp"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/passwordWrapper"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        android:clickable="true"
        />

    <TextView
        android:id="@+id/signOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signOut"
        android:textSize="16sp"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/clearFavorites"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        android:clickable="true"
        />


    <TextView
        android:id="@+id/resetApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reinitialize"
        android:textSize="16sp"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/signOut"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        android:clickable="true"
        />


</androidx.constraintlayout.widget.ConstraintLayout>